# health-management-system-backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-1c54451ae874d4778e4d62843a686a07f1c0a09be7495c9f78cef0dd55d483f7.json  query-1d55381156402fadd9e77d915f742b872d13a0701ef9d3f6804366352269fa56.json  query-232354580b24bad0f4a27fa4f81dc8ac02fa210f5c11815ae612ab0ad8cd3ca4.json  query-2853b2f1eb5ea5586052d45dd6b235036f06cf6ff2c74efb3a8fff2e72dcb792.json  query-2c5989cd9d2cda11d4c4e3b48c6c6618403da80a353ec943723fa34b684efc5f.json  query-6007b49e6791c9f9b0cc480c1d466202152a30ac353f22b3db9a6b3580f2f005.json  query-6395f237ba85285c4ae34a83a9f7f84d36ddfc2fdaa021c407fd0420f758db1a.json  query-999203ee90490648948ef5ed4a2222a6aea51b82ddfce4ca0938ebcd67c3a261.json  query-a8456c57d342228e06396222db0f6c4adcd238b032e6b92e18f6afad34330db7.json
migrations/: 20251022122435_create-tables.sql
src/: error.rs  lib.rs  main.rs
src/db/: appointment.rs  mod.rs  patient.rs  personnel.rs  personnel_db.rs
src/routes/: appointment.rs  health.rs  login.rs  mod.rs  personnel.rs  signup.rs
src/schema/: model.rs
