[package]
name = "health_mgt_system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.20", features = [
    "macros",
    "http2",
    "multipart",
    "headers",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "^0.7", features = [
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
    "json",
    "runtime-tokio",
    "tls-native-tls",
] }
thiserror = "1.0.61"
tower-http = { version = "0.4.4", features = ["cors", "trace", "limit"] }
tokio = { version = "1.38.0", features = ["full"] }

uuid = { version = "1.18.1", features = ["v7"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }
hex = "0.4.3"
